# Background_Subtraction

./: .gitignore  Architecture.md  Benchmark.md  CMakeLists.txt  README.md  pyproject.toml
app/: run_video.py  visualize.py  webcam.py
configs/: gmm.yaml
core/: benchmark.py  gmm.py  pixel_model_cpp_backend.py  pixel_model_loop.py  pixel_model_vectorized.py
core/cpp/: CMakeLists.txt  gmm_cpp.cpp  gmm_model.hpp
tests/: test_benchmark.py  test_cpp_import.py  test_parity.py
